[gd_scene load_steps=2 format=3 uid="uid://cv5xeksotlxx2"]

[ext_resource type="Script" path="res://event_editor/nodes/message_node/message_gn.gd" id="1_mwy2i"]

[node name="MessageNode" type="GraphNode" node_paths=PackedStringArray("wait_type_btn", "wait_time_line")]
offset_left = 106.0
offset_top = 213.0
offset_right = 417.0
offset_bottom = 408.0
mouse_filter = 1
position_offset = Vector2(-671, -413)
title = "显示消息"
ignore_invalid_connection_type = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 1204
slot/1/right_color = Color(3.08037e-06, 0.672177, 0.652096, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_mwy2i")
wait_type_btn = NodePath("VBoxContainer/HSplitContainer/OptionButton")
wait_time_line = NodePath("VBoxContainer/HSplitContainer2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Line1" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 385

[node name="Label" type="Label" parent="VBoxContainer/Line1"]
layout_mode = 2
text = "角色"

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer/Line1"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Line1/HSplitContainer"]
layout_mode = 2
text = "空"

[node name="Button" type="Button" parent="VBoxContainer/Line1/HSplitContainer"]
layout_mode = 2
text = "选取"

[node name="HSplitContainer3" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 125
dragger_visibility = 2

[node name="Label2" type="Label" parent="VBoxContainer/HSplitContainer3"]
layout_mode = 2
text = "文本键"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HSplitContainer3"]
layout_mode = 2
placeholder_text = "请输入文本键"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "文本预览"

[node name="TextPreview" type="RichTextLabel" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0.560784)
z_index = 5
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
bbcode_enabled = true

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/TextPreview"]
z_as_relative = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
editable = false
wrap_mode = 1

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
split_offset = 385

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
text = "是否等待"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "等待按键"
popup/item_1/text = "自动播放"
popup/item_1/id = 1

[node name="HSplitContainer2" type="HSplitContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2
split_offset = 385

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer2"]
layout_mode = 2
text = "等待时间（毫秒)"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HSplitContainer2"]
layout_mode = 2
min_value = 1000.0
max_value = 10000.0
step = 100.0
value = 1000.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HSplitContainer" type="HBoxContainer" parent="VBoxContainer2"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="VBoxContainer2/HSplitContainer"]
layout_mode = 2
text = "思考关键词节点"
